1) Introduce pipe_id for password reset operation as additional security layer;
